<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/sum_text"
        android:layout_width="375dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:autoText="true"
        android:text="@string/calc_default"
        android:textAlignment="viewEnd"
        android:textSize="40sp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/seven_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="200dp"
        android:onClick="btn_seven"
        android:text="@string/calc_7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sum_text" />

    <Button
        android:id="@+id/eight_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="200dp"
        android:onClick="btn_eight"
        android:text="@string/calc_8"
        app:layout_constraintStart_toEndOf="@+id/seven_button"
        app:layout_constraintTop_toBottomOf="@+id/sum_text" />

    <Button
        android:id="@+id/nine_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="200dp"
        android:onClick="btn_nine"
        android:text="@string/calc_9"
        app:layout_constraintStart_toEndOf="@+id/eight_button"
        app:layout_constraintTop_toBottomOf="@+id/sum_text" />

    <Button
        android:id="@+id/four_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:onClick="btn_four"
        android:text="@string/calc_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seven_button" />

    <Button
        android:id="@+id/five_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:onClick="btn_five"
        android:text="@string/calc_5"
        app:layout_constraintStart_toEndOf="@+id/four_button"
        app:layout_constraintTop_toBottomOf="@+id/eight_button" />

    <Button
        android:id="@+id/six_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:onClick="btn_six"
        android:text="@string/calc_6"
        app:layout_constraintStart_toEndOf="@+id/five_button"
        app:layout_constraintTop_toBottomOf="@+id/nine_button" />

    <Button
        android:id="@+id/one_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:onClick="btn_one"
        android:text="@string/calc_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/four_button" />

    <Button
        android:id="@+id/two_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:onClick="btn_two"
        android:text="@string/calc_2"
        app:layout_constraintStart_toEndOf="@+id/one_button"
        app:layout_constraintTop_toBottomOf="@+id/five_button" />

    <Button
        android:id="@+id/three_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:onClick="btn_three"
        android:text="@string/calc_3"
        app:layout_constraintStart_toEndOf="@+id/two_button"
        app:layout_constraintTop_toBottomOf="@+id/six_button" />

    <Button
        android:id="@+id/zero_button"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginEnd="70dp"
        android:onClick="btn_zero"
        android:text="@string/calc_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/two_button"
        app:layout_constraintVertical_bias="0.757" />

    <Button
        android:id="@+id/point_button"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="70dp"
        android:onClick="btn_zero"
        android:text="@string/calc_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toEndOf="@+id/zero_button"
        app:layout_constraintTop_toBottomOf="@+id/two_button"
        app:layout_constraintVertical_bias="0.757" />

    <Button
        android:id="@+id/point_button2"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="70dp"
        android:onClick="btn_zero"
        android:text="@string/calc_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toEndOf="@+id/point_button"
        app:layout_constraintTop_toBottomOf="@+id/two_button"
        app:layout_constraintVertical_bias="0.757" />

    <Button
        android:id="@+id/equals_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:onClick="btn_equals"
        android:text="@string/calc_equals"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/plus_button"
        android:layout_width="50dp"
        android:layout_height="100dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="10dp"
        android:onClick="btn_plus"
        android:text="@string/calc_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sum_text" />

    <Button
        android:id="@+id/minus_button"
        android:layout_width="50dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:onClick="btn_minus"
        android:text="@string/calc_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plus_button" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="50dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:onClick="btn_clear"
        android:text="@string/calc_clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minus_button" />

</androidx.constraintlayout.widget.ConstraintLayout>